--- a/config.yml
+++ b/config.yml
@@ -17,3 +17,5 @@ post_fields:
   - created_time
 
 cache_sec_duration: 10800
+
+redis_prod_url: "redis://redistogo:dfd26dbddcf5ac848af75e92723b05b7@cod.redistogo.com:9218/"
